--- a/wiki/fr/TechDraw_ExtensionExtendLine.html
+++ b/wiki/fr/TechDraw_ExtensionExtendLine.html
@@ -59,7 +59,7 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<ol><li>Vous pouvez modifier la distance delta avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>. <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez modifier la distance delta avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez une seule ligne cosm&eacute;tique ou une ligne centrale.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionExtendLine.svg&amp;filetimestamp=20240706214233&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionExtendLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Prolonger une ligne</a></span>.</li>
@@ -112,12 +112,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125093530
+Cached time: 20260125093937
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.116 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.122 seconds
 Preprocessor visited node count: 346/1000000
 Post&#8208;expand include size: 25689/2097152 bytes
 Template argument size: 10077/2097152 bytes
@@ -128,18 +128,18 @@ Unstrip post&#8208;expand size: 1476/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.481      1 -total
- 29.89%    6.420      1 Template:TechDraw_Tools_navi/fr
- 23.91%    5.135      1 Template:GuiCommand/fr
- 21.10%    4.532      2 Template:Navigation_menu_2
- 14.90%    3.200      1 Template:Userdocnavi/fr
- 10.93%    2.347      2 Template:Docnav/fr
-  7.53%    1.617      1 Template:Caption
-  6.28%    1.349      1 Template:Button
-  4.00%    0.860      1 Template:MenuCommand
+100.00%   22.842      1 -total
+ 27.95%    6.384      1 Template:TechDraw_Tools_navi/fr
+ 24.04%    5.491      2 Template:Navigation_menu_2
+ 18.96%    4.331      1 Template:Userdocnavi/fr
+ 15.26%    3.486      1 Template:GuiCommand/fr
+ 15.17%    3.466      2 Template:Docnav/fr
+ 11.11%    2.538      1 Template:Caption
+  4.80%    1.097      1 Template:Button
+  4.01%    0.915      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277544-0!canonical and timestamp 20260125093530 and revision id 1743498. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277544-0!canonical and timestamp 20260125093937 and revision id 1743502. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
