--- a/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
+++ b/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
@@ -64,7 +64,7 @@
 <li>Le panneau de t&acirc;ches <b>Choisir les attributs de la ligne</b> s'ouvre.</li>
 <li>Vous pouvez modifier <b>Style des lignes</b>, <b>Largeur des lignes</b> et <b>Couleur des lignes</b>.</li>
 <li>Vous pouvez modifier <b>Espacement en cascade</b>. Les outils <a href="../fr/TechDraw_Workbench.html#Attributs/modifications" title="TechDraw Workbench/fr">Cotes en cascade</a> et <a href="../fr/TechDraw_Workbench.html#Formater/organiser_les_cotes" title="TechDraw Workbench/fr">Cotes parall&egrave;les</a> utilisent cette valeur.</li>
-<li>Vous pouvez modifier <b>Longueur</b>. Les outils <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionExtendLine.svg&amp;filetimestamp=20240706214233&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionExtendLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">TechDraw Prolonger</a> et <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionShortenLine.svg&amp;filetimestamp=20240706214325&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionShortenLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">TechDraw Raccourcir</a> utilisent cette valeur.</li>
+<li>Vous pouvez modifier <b>Longueur delta</b>. Les outils <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionExtendLine.svg&amp;filetimestamp=20240706214233&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionExtendLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">TechDraw Prolonger</a> et <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionShortenLine.svg&amp;filetimestamp=20240706214325&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionShortenLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">TechDraw Raccourcir</a> utilisent cette valeur.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
 <p><span id="Notes"></span>
 </p>
@@ -117,15 +117,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125093635
+Cached time: 20260125094432
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.201 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.122 seconds
 Preprocessor visited node count: 404/1000000
-Post&#8208;expand include size: 26274/2097152 bytes
-Template argument size: 10310/2097152 bytes
+Post&#8208;expand include size: 26280/2097152 bytes
+Template argument size: 10316/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -133,18 +133,18 @@ Unstrip post&#8208;expand size: 1418/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.499      1 -total
- 33.49%   15.909      1 Template:TechDraw_Tools_navi/fr
- 19.23%    9.133      1 Template:Userdocnavi/fr
- 15.50%    7.361      2 Template:Navigation_menu_2
-  9.87%    4.686      1 Template:GuiCommand/fr
-  9.46%    4.492      7 Template:MenuCommand
-  9.02%    4.284      2 Template:Button
-  8.88%    4.216      2 Template:Docnav/fr
-  7.93%    3.767      1 Template:Caption
+100.00%   39.591      1 -total
+ 25.28%   10.008      1 Template:TechDraw_Tools_navi/fr
+ 23.78%    9.415      1 Template:GuiCommand/fr
+ 15.45%    6.116      2 Template:Navigation_menu_2
+ 12.51%    4.951      1 Template:Userdocnavi/fr
+ 11.69%    4.628      1 Template:Caption
+ 10.32%    4.084      2 Template:Docnav/fr
+  7.12%    2.820      2 Template:Button
+  5.56%    2.200      7 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260125093635 and revision id 1743492. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260125094431 and revision id 1743506. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
