--- a/wiki/fr/TechDraw_ExtensionShortenLine.html
+++ b/wiki/fr/TechDraw_ExtensionShortenLine.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionShortenLine/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionShortenLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionShortenLine.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungLinieK&uuml;rzen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionShortenLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionShortenLine (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionShortenLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Accorcia linea (78% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionShortenLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Skr&oacute;&#263; lini&#281; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ExtensionShortenLine.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#49440; &#45800;&#52629; (56% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -59,14 +59,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance la distance delta avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez modifier la longueur delta avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez une seule ligne cosm&eacute;tique ou une ligne centrale.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionShortenLine.svg&amp;filetimestamp=20240706214325&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionShortenLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Raccourcir une ligne</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionShortenLine.svg&amp;filetimestamp=20240706214325&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionShortenLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Raccourcir une ligne</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionShortenLine.svg&amp;filetimestamp=20240706214325&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionShortenLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Raccourcir une ligne</b> du menu.</li></ul></li>
 <li>La ligne est raccourcie aux deux extr&eacute;mit&eacute;s.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -114,34 +112,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125093845
+Cached time: 20260125094516
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.107 seconds
-Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 25621/2097152 bytes
-Template argument size: 10037/2097152 bytes
+CPU time usage: 0.077 seconds
+Real time usage: 0.092 seconds
+Preprocessor visited node count: 346/1000000
+Post&#8208;expand include size: 25608/2097152 bytes
+Template argument size: 10024/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1472/5000000 bytes
+Unstrip post&#8208;expand size: 1476/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.796      1 -total
- 28.98%    6.026      1 Template:TechDraw_Tools_navi/fr
- 21.01%    4.368      2 Template:Navigation_menu_2
- 17.88%    3.719      1 Template:Userdocnavi/fr
- 15.50%    3.224      2 Template:Docnav/fr
- 13.58%    2.824      1 Template:GuiCommand/fr
-  8.23%    1.711      1 Template:Caption
-  6.58%    1.369      1 Template:Button
-  6.33%    1.317      1 Template:MenuCommand
+100.00%   19.425      1 -total
+ 29.95%    5.817      1 Template:TechDraw_Tools_navi/fr
+ 24.42%    4.743      2 Template:Navigation_menu_2
+ 15.26%    2.964      1 Template:Userdocnavi/fr
+ 13.46%    2.614      2 Template:Docnav/fr
+ 13.18%    2.560      1 Template:GuiCommand/fr
+ 10.52%    2.043      1 Template:MenuCommand
+  7.76%    1.507      1 Template:Caption
+  6.10%    1.185      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277554-0!canonical and timestamp 20260125093845 and revision id 1743500. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277554-0!canonical and timestamp 20260125094516 and revision id 1743508. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
